--- a/main_api_server/package.json
+++ b/main_api_server/package.json
@@ -8,6 +8,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.13.3"
+    "body-parser": "^1.16.1",
+    "express": "^4.14.1",
+    "jsonwebtoken": "^7.3.0",
+    "jwt-simple": "^0.5.1",
+    "mongoose": "^4.8.3",
+    "morgan": "^1.8.1"
   }
 }
