--- a/annotation_ui/annotation_ui/package.json
+++ b/annotation_ui/annotation_ui/package.json
@@ -6,8 +6,10 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "jquery": "^3.1.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-dropzone": "^3.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
