--- a/annotation_ui/annotation_ui/package.json
+++ b/annotation_ui/annotation_ui/package.json
@@ -8,8 +8,7 @@
   "dependencies": {
     "jquery": "^3.1.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-dropzone": "^3.10.0"
+    "react-dom": "^15.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
