--- a/main_api_server/package.json
+++ b/main_api_server/package.json
@@ -8,11 +8,17 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.1",
     "jsonwebtoken": "^7.3.0",
     "jwt-simple": "^0.5.1",
     "mongoose": "^4.8.3",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "q": "^1.4.1"
   }
 }
