Using COPY instead of VOLUME for src and public
Had the following error when using VOLUME, and by checking from the bash shell, I effectively couldn't see the file:

Could not find a required file.
  Name: index.html
  Searched in: /usr/local/ui_annotation/public

--- a/annotation_ui/annotation_ui/Dockerfile
+++ b/annotation_ui/annotation_ui/Dockerfile
@@ -12,8 +12,8 @@ COPY package.json $BASE_PATH
 RUN npm install
 
 # Bundle app source
-VOLUME ./src $BASE_PATH/src
-VOLUME ./public $BASE_PATH/public
+COPY ./src $BASE_PATH/src
+COPY ./public $BASE_PATH/public
 
 EXPOSE 8080
 CMD [ "npm", "start" ]
