--- a/api_server/package.json
+++ b/api_server/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.8.5",
     "morgan": "^1.8.1",
+    "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "q": "^1.4.1"
