Add DB conn to api_server svc
- Add yml scripts fetching data from dh and from gce

--- a/api_server/Dockerfile
+++ b/api_server/Dockerfile
@@ -12,4 +12,6 @@ WORKDIR $BASE_PATH
 COPY . $BASE_PATH
 RUN npm install
 
-CMD ["npm", "start"]
+#CMD ["npm", "start"]
+RUN touch server.log
+CMD ["/bin/sh", "-c", "npm start > server.log"]
