--- a/api_server/web-pod.dh.yml
+++ b/api_server/web-pod.dh.yml
@@ -7,7 +7,7 @@ metadata:
     app: front-end
 spec:
   containers:
-    - image: mmmarco/api_server:5.0
+    - image: mmmarco/api_server:latest
       name: myweb
       ports:
         - containerPort: 8080
