--- a/api_server/web-rc.dh.yml
+++ b/api_server/web-rc.dh.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: web
-        image: mmmarco/api_server:5.0
+        image: mmmarco/api_server:latest
         ports:
         - containerPort: 8080
