--- a/api_server/package.json
+++ b/api_server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.15.0",
     "express-jwt": "^5.1.0",
     "http": "0.0.0",
+    "jquery": "^3.1.1",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.8.5",
     "morgan": "^1.8.1",
