--- a/api_server/package.json
+++ b/api_server/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.17.0",
     "express": "^4.15.0",
     "express-jwt": "^5.1.0",
+    "fs": "0.0.1-security",
     "http": "0.0.0",
     "jquery": "^3.1.1",
     "jsonwebtoken": "^7.3.0",
@@ -22,6 +23,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "^6.1.3",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "request": "^2.81.0"
   }
 }
