--- a/kubernetes/grade.yml
+++ b/kubernetes/grade.yml
@@ -1,16 +1,22 @@
-apiVersion: v1
-kind: Pod
+apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
   name: grade
   labels:
     name: grade
     app: front-end
 spec:
-  containers:
-    - image: mmmarco/tf-model
-      name: grade
-      ports:
-      - containerPort: 8080
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        name: grade
+    spec:
+      containers:
+        - name: grade
+          image: mmmarco/tf-model
+          ports:
+          - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
