--- a/kubernetes/db.yml
+++ b/kubernetes/db.yml
@@ -7,7 +7,7 @@ metadata:
     app: front-end
 spec:
   containers:
-    - image: gcr.io/medical-image-grading-api/mongo:latest
+    - image: mongo:latest
       name: mongo
       ports:
       - name: mongo
