Switch mmmarco to cs193s docker images

--- a/kubernetes/grade.yml
+++ b/kubernetes/grade.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: grade
-          image: mmmarco/tf-model
+          image: cs193s/tf-model:latest
           ports:
           - containerPort: 8080
 ---
