Modify dockerfile for tf-server to get pillow

--- a/dlearn/Dockerfile
+++ b/dlearn/Dockerfile
@@ -6,5 +6,6 @@ COPY output_graph.pb .
 COPY app.py .
 
 RUN /usr/local/bin/pip install flask
+RUN /usr/local/bin/pip install pillow 
 EXPOSE 8080
 CMD ["/usr/bin/python", "app.py"]
