--- a/dlearn/Dockerfile
+++ b/dlearn/Dockerfile
@@ -2,10 +2,9 @@ FROM tensorflow/tensorflow
 
 RUN mkdir -p $HOME/src
 WORKDIR $HOME/src
-COPY output_graph.pb .
-COPY app.py .
+COPY labels.txt output_graph.pb app.py .
 
-RUN /usr/local/bin/pip install flask
-RUN /usr/local/bin/pip install pillow 
+RUN /usr/local/bin/pip install flask pillow 
+
 EXPOSE 8080
 CMD ["/usr/bin/python", "app.py"]
