--- a/dlearn/Dockerfile
+++ b/dlearn/Dockerfile
@@ -2,7 +2,7 @@ FROM tensorflow/tensorflow
 
 RUN mkdir -p $HOME/src
 WORKDIR $HOME/src
-COPY labels.txt output_graph.pb app.py .
+COPY labels.txt output_graph.pb app.py ./
 
 RUN /usr/local/bin/pip install flask pillow 
 
