Add grade_dr imagePullPolicy: IfNotPresent

--- a/kubernetes/grade/grade_dr.yml
+++ b/kubernetes/grade/grade_dr.yml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: gradedr
           image: tswedish/actdr:latest
+          imagePullPolicy: IfNotPresent
           ports:
           - containerPort: 8080
 ---
